Playing around with trench segmentation. Did some visualization.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180207 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180207 Prototyping.ipynb
@@ -621,15 +621,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trench_segmentation import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sharpness = [\n",
     "    image_sharpness(root_group[\"raw\"][pos][0, t]) for t in tnrange(n_timepoints)\n",
     "]"
@@ -653,7 +644,7 @@
    "source": [
     "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
     "ul, lr = get_trench_bbox(trench_points[trench_set_idx], trench_idx, x_lim, y_lim)\n",
-    "thumbs_k1 = root_group[\"raw\"][pos][0, :, ul[1] : lr[1], ul[0] : lr[0]]"
+    "thumbs = root_group[\"raw\"][pos][0, :, ul[1] : lr[1], ul[0] : lr[0]]"
    ]
   },
   {
@@ -662,7 +653,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = xr.DataArray(thumbs_k1, dims=[\"t\", \"x\", \"y\"])"
+    "thumbs_k1 = map_ndarray(lambda img: hessian_eigenvalues(img)[0], thumbs)\n",
+    "thumbs_k2 = map_ndarray(lambda img: hessian_eigenvalues(img)[1], thumbs)"
    ]
   },
   {
@@ -671,8 +663,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%opts Image [aspect='equal']\n",
-    "hv.Raster(thumbs_k1[10, :, :])"
+    "%%opts Layout [normalize=False]\n",
+    "# Image [height=500 width=200]\n",
+    "factor = 3\n",
+    "b = RevImage(thumbs[0]) + RevImage(thumbs_k1[0]).opts(\n",
+    "    plot={\"Image\": {\"height\": thumbs.shape[1] * 2, \"width\": thumbs.shape[2] * 3}}\n",
+    ")\n",
+    "b  # .opts(plot={'Image': {'height': thumbs.shape[1]*factor, 'width': thumbs.shape[2]*factor}})"
    ]
   },
   {
@@ -681,11 +678,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.HoloMap(\n",
-    "    {\n",
-    "        t: RevImage(thumbs_k1[t]).opts(plot={\"match_aspect\": True})\n",
-    "        for t in range(thumbs_k1.shape[0] // 2)\n",
-    "    }\n",
+    "%%opts Layout [normalize=False]\n",
+    "thumbs_map = hv.HoloMap({t: RevImage(thumbs[t]) for t in range(thumbs.shape[0] // 2)})\n",
+    "thumbs_k1_map = hv.HoloMap(\n",
+    "    {t: RevImage(thumbs_k1[t]) for t in range(thumbs_k1.shape[0] // 2)}\n",
+    ")\n",
+    "(thumbs_map + thumbs_k1_map).opts(\n",
+    "    plot={\"Image\": {\"height\": thumbs.shape[1] * 2, \"width\": thumbs.shape[2] * 3}}\n",
     ")"
    ]
   },
@@ -695,7 +694,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(thumbs_k1[0])"
+    "%%opts Layout [normalize=False]\n",
+    "thumbs_map = hv.HoloMap({t: RevImage(thumbs[t]) for t in range(thumbs.shape[0] // 2)})\n",
+    "thumbs_k1_map = hv.HoloMap(\n",
+    "    {t: RevImage(thumbs_k1[t]) for t in range(thumbs_k1.shape[0] // 2)}\n",
+    ")\n",
+    "thumbs_k2_map = hv.HoloMap(\n",
+    "    {t: RevImage(thumbs_k2[t]) for t in range(thumbs_k2.shape[0] // 2)}\n",
+    ")\n",
+    "(thumbs_map + thumbs_k1_map + thumbs_k2_map).opts(\n",
+    "    plot={\"Image\": {\"height\": thumbs.shape[1] * 2, \"width\": thumbs.shape[2] * 3}}\n",
+    ")"
    ]
   },
   {
@@ -704,7 +713,177 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thumbs_k1.shape"
+    "trench_points[trench_set_idx][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0, x1 = (\n",
+    "    trench_points[trench_set_idx][0][trench_idx],\n",
+    "    trench_points[trench_set_idx][1][trench_idx],\n",
+    ")\n",
+    "xs, ys = coords_along(x0, x1)\n",
+    "profiles = np.array([thumbs_k1[t, ys - ul[1], xs - ul[0]] for t in range(n_timepoints)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RevImage(thumbs[0]) * hv.Points([x0 - ul, x1 - ul]).opts(\n",
+    "    plot={\"size\": 30, \"color\": \"green\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [normalize=False]\n",
+    "t_max = 2\n",
+    "\n",
+    "\n",
+    "def plot_trench(t):\n",
+    "    p = (\n",
+    "        RevImage(thumbs[t])\n",
+    "        + RevImage(thumbs_k1[t])\n",
+    "        + hv.Curve(profiles[t], kdims=[\"y\"], vdims=[\"i\"])\n",
+    "    ).opts(\n",
+    "        plot={\n",
+    "            \"Image\": {\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 3,\n",
+    "                \"aspect\": 0.2,\n",
+    "            },\n",
+    "            \"Curve\": {\n",
+    "                \"invert_axes\": True,\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 3,\n",
+    "                \"invert_yaxis\": True,\n",
+    "            },\n",
+    "        }\n",
+    "    )\n",
+    "    return p\n",
+    "\n",
+    "\n",
+    "# m = hv.HoloMap({t: plot_trench(t) for t in range(t_max)})\n",
+    "# m\n",
+    "plot_trench(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.help(hv.Curve)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [normalize=False]\n",
+    "t_max = 2\n",
+    "\n",
+    "\n",
+    "def plot_trench(t):\n",
+    "    p = (\n",
+    "        RevImage(thumbs[t])\n",
+    "        + RevImage(thumbs_k1[t])\n",
+    "        + hv.Curve(profiles[t], kdims=[\"y\"], vdims=[\"i\"]).opts(plot={\"swap_axes\": True})\n",
+    "    ).opts(\n",
+    "        plot={\n",
+    "            \"Image\": {\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 3,\n",
+    "                \"aspect\": 0.2,\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "    return p\n",
+    "\n",
+    "\n",
+    "# m = hv.HoloMap({t: plot_trench(t) for t in range(t_max)})\n",
+    "# m\n",
+    "plot_trench(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Segmentation algorithm testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage.segmentation import morphological_geodesic_active_contour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphological_geodesic_active_contour?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = thumbs_k1[0]\n",
+    "image = f / f.max()\n",
+    "\n",
+    "# Initial level set\n",
+    "init_ls = np.zeros(image.shape, dtype=np.int8)\n",
+    "init_ls[10:-10, 10:-10] = 1\n",
+    "ls = morphological_geodesic_active_contour(\n",
+    "    image, 600, smoothing=2, threshold=\"auto\", init_level_set=\"checkerboard\"\n",
+    ")\n",
+    "plt.imshow(ls)\n",
+    "# List with intermediate results for plotting the evolution\n",
+    "# evolution = []\n",
+    "# callback = store_evolution_in(evolution)\n",
+    "# ls = morphological_geodesic_active_contour(gimage, 230, init_ls,\n",
+    "#                                           smoothing=1, balloon=-1,\n",
+    "#                                           threshold=0.69,\n",
+    "#                                           iter_callback=callback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphological_geodesic_active_contour?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kymo viewer"
    ]
   },
   {
