--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180214 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180214 Prototyping.ipynb
@@ -621,15 +621,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from trench_segmentation import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sharpness = [\n",
     "    image_sharpness(root_group[\"raw\"][pos][0, t]) for t in tnrange(n_timepoints)\n",
     "]"
@@ -653,7 +644,7 @@
    "source": [
     "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
     "ul, lr = get_trench_bbox(trench_points[trench_set_idx], trench_idx, x_lim, y_lim)\n",
-    "thumbs_k1 = root_group[\"raw\"][pos][0, :, ul[1] : lr[1], ul[0] : lr[0]]"
+    "thumbs = root_group[\"raw\"][pos][0, :, ul[1] : lr[1], ul[0] : lr[0]]"
    ]
   },
   {
@@ -662,7 +653,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = xr.DataArray(thumbs_k1, dims=[\"t\", \"x\", \"y\"])"
+    "thumbs_k1 = map_ndarray(lambda img: hessian_eigenvalues(img)[0], thumbs)\n",
+    "thumbs_k2 = map_ndarray(lambda img: hessian_eigenvalues(img)[1], thumbs)"
    ]
   },
   {
@@ -671,8 +663,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%opts Image [aspect='equal']\n",
-    "hv.Raster(thumbs_k1[10, :, :])"
+    "t_max = 128  # thumbs_k1.shape[0]\n",
+    "\n",
+    "\n",
+    "def plot_trench(t):\n",
+    "    p = (\n",
+    "        RevImage(thumbs[t])\n",
+    "        + RevImage(thumbs_k1[t])\n",
+    "        + RevImage(thumbs_k2[t])\n",
+    "        # + hv.Curve(profiles[t], kdims=['y'], vdims=['i'])\n",
+    "        + hv.Curve(profiles[t], kdims=[\"y\"], vdims=[\"j\"])\n",
+    "    ).opts(\n",
+    "        plot={\n",
+    "            \"Image\": {\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 3,\n",
+    "                \"aspect\": 0.2,\n",
+    "            },\n",
+    "            \"Curve\": {\n",
+    "                \"invert_axes\": True,\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 3,\n",
+    "                \"invert_yaxis\": True,\n",
+    "            },\n",
+    "            \"Layout\": {\"normalize\": False},\n",
+    "        }\n",
+    "    )\n",
+    "    return p\n",
+    "\n",
+    "\n",
+    "hv.HoloMap({t: plot_trench(t) for t in range(t_max)})\n",
+    "# plot_trench(0)"
    ]
   },
   {
@@ -681,11 +702,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.HoloMap(\n",
-    "    {\n",
-    "        t: RevImage(thumbs_k1[t]).opts(plot={\"match_aspect\": True})\n",
-    "        for t in range(thumbs_k1.shape[0] // 2)\n",
-    "    }\n",
+    "def visualize_trench(img1, img2, img3, traces=None):\n",
+    "    # img_k1, img_k2 = hessian_eigenvalues(img)\n",
+    "    #     pointery = hv.streams.PointerY(y=0)\n",
+    "    #     def scrubber_callback(y):\n",
+    "    #         y = int(y)\n",
+    "    #         h_line = hv.HLine(y + 0.5)(style={'color': 'black', 'alpha': 0.9, 'line_width': 2})\n",
+    "    #         return h_line\n",
+    "    #     scrubber_dmap = hv.DynamicMap(scrubber_callback, streams=[pointery])\n",
+    "    # plot = RevImage(img) * scrubber_dmap + RevImage(img_k1) * scrubber_dmap + RevImage(img_k2) * scrubber_dmap\n",
+    "    plot = RevImage(img1) + RevImage(img2) + RevImage(img3)\n",
+    "    if traces is not None:\n",
+    "        plot += hv.Overlay.from_values(\n",
+    "            [\n",
+    "                hv.Curve(trace / abs(trace).max(), kdims=[\"y\"], vdims=[\"i\" + str(i)])\n",
+    "                for i, trace in enumerate(traces)\n",
+    "            ]\n",
+    "        )\n",
+    "    plot = plot.opts(\n",
+    "        plot={\n",
+    "            \"Image\": {\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 3,\n",
+    "                \"aspect\": 0.2,\n",
+    "            },\n",
+    "            \"Curve\": {\n",
+    "                \"invert_axes\": True,\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 3,\n",
+    "                \"invert_yaxis\": True,\n",
+    "            },\n",
+    "            \"Layout\": {\"normalize\": False},\n",
+    "        }\n",
+    "    )\n",
+    "    return plot\n",
+    "\n",
+    "\n",
+    "# visualize_trench(a)#, [a.sum(axis=1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a = thumbs_k1[0]\n",
+    "a = thumbs[61]  # 31, 36, 61\n",
+    "a_k1, a_k2 = hessian_eigenvalues(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = skimage.filters.threshold_otsu(a)\n",
+    "a_thresh = a > threshold\n",
+    "plt.imshow(a_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(a.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_k1d = np.diff(a_k1, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualize_trench(\n",
+    "    a, a_k1, a_k1d, [a_k1[:, 25], a.sum(axis=1), a_k1d[:, 20:30].sum(axis=1)]\n",
     ")"
    ]
   },
@@ -695,7 +807,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(thumbs_k1[0])"
+    "visualize_trench(\n",
+    "    a,\n",
+    "    (skimage.morphology.binary_dilation(a_thresh) ^ a_thresh) * a_k2,\n",
+    "    a_k2,\n",
+    "    [a_k2[:, :25].max(axis=1), a_k2[:, 25:].max(axis=1)],\n",
+    ")"
    ]
   },
   {
@@ -704,7 +821,199 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thumbs_k1.shape"
+    "visualize_trench(a, a_k2, a_k1d, [a_k2[:, 22], a_k2[:, 25], a_k2[:, 28]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 12))\n",
+    "for i in range(20, 31):\n",
+    "    plt.plot(a_k2[:, i], label=str(i))\n",
+    "plt.plot(a_k2[:, :25].max(axis=1), label=\"max r\", linestyle=\"--\", lw=2)\n",
+    "plt.plot(a_k2[:, 25:].max(axis=1), label=\"max l\", linestyle=\"--\", lw=2)\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(a_thresh.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(a[135])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(a[150])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(scipy.signal.correlate(a, a, \"same\"))\n",
+    "# plt.plot(np.correlate(, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_points[trench_set_idx][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0, x1 = (\n",
+    "    trench_points[trench_set_idx][0][trench_idx],\n",
+    "    trench_points[trench_set_idx][1][trench_idx],\n",
+    ")\n",
+    "xs, ys = coords_along(x0, x1)\n",
+    "profiles = np.array([thumbs_k1[t, ys - ul[1], xs - ul[0]] for t in range(n_timepoints)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RevImage(thumbs[0]) * hv.Points([x0 - ul, x1 - ul]).opts(\n",
+    "    plot={\"size\": 30, \"color\": \"green\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.help(hv.Curve)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Layout [normalize=False]\n",
+    "t_max = 2\n",
+    "\n",
+    "\n",
+    "def plot_trench(t):\n",
+    "    p = (\n",
+    "        RevImage(thumbs[t])\n",
+    "        + RevImage(thumbs_k1[t])\n",
+    "        + hv.Curve(profiles[t], kdims=[\"y\"], vdims=[\"i\"]).opts(plot={\"swap_axes\": True})\n",
+    "    ).opts(\n",
+    "        plot={\n",
+    "            \"Image\": {\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 3,\n",
+    "                \"aspect\": 0.2,\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "    return p\n",
+    "\n",
+    "\n",
+    "# m = hv.HoloMap({t: plot_trench(t) for t in range(t_max)})\n",
+    "# m\n",
+    "plot_trench(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Segmentation algorithm testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage.segmentation import morphological_geodesic_active_contour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphological_geodesic_active_contour?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = thumbs[0]\n",
+    "image = f / f.max()\n",
+    "\n",
+    "# Initial level set\n",
+    "init_ls = np.zeros(image.shape, dtype=np.int8)\n",
+    "init_ls[10:-10, 10:-10] = 1\n",
+    "ls = morphological_geodesic_active_contour(\n",
+    "    image, 600, smoothing=2, threshold=\"auto\", init_level_set=init_ls\n",
+    ")\n",
+    "plt.imshow(ls)\n",
+    "# List with intermediate results for plotting the evolution\n",
+    "# evolution = []\n",
+    "# callback = store_evolution_in(evolution)\n",
+    "# ls = morphological_geodesic_active_contour(gimage, 230, init_ls,\n",
+    "#                                           smoothing=1, balloon=-1,\n",
+    "#                                           threshold=0.69,\n",
+    "#                                           iter_callback=callback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "morphological_geodesic_active_contour?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kymo viewer"
    ]
   },
   {
