Trenches are now cropped to the half-way point between each trench. Code is still kind of ugly so should refactor soon.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180214 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180214 Prototyping.ipynb
@@ -644,7 +644,8 @@
    "source": [
     "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
     "ul, lr = get_trench_bbox(trench_points[trench_set_idx], trench_idx, x_lim, y_lim)\n",
-    "thumbs = root_group[\"raw\"][pos][0, :, ul[1] : lr[1], ul[0] : lr[0]]"
+    "thumbs = root_group[\"raw\"][pos][0, :, ul[1] : lr[1], ul[0] : lr[0]]\n",
+    "plt.imshow(thumbs[10])"
    ]
   },
   {
@@ -807,11 +808,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "b = repeat_apply(skimage.morphology.binary_dilation, 3)(a_thresh) ^ a_thresh\n",
     "visualize_trench(\n",
-    "    a,\n",
-    "    (skimage.morphology.binary_dilation(a_thresh) ^ a_thresh) * a_k2,\n",
-    "    a_k2,\n",
-    "    [a_k2[:, :25].max(axis=1), a_k2[:, 25:].max(axis=1)],\n",
+    "    a, b * a_k2, a_k2, [a_k2[:, :25].max(axis=1), a_k2[:, 25:].max(axis=1)]\n",
     ")"
    ]
   },
