WIP trench segmentation. Using dilation and left/right masks to find cell endpoints.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180214 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180214 Prototyping.ipynb
@@ -591,6 +591,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def visualize_trench(img1, img2, img3, traces=None):\n",
+    "    # img_k1, img_k2 = hessian_eigenvalues(img)\n",
+    "    #     pointery = hv.streams.PointerY(y=0)\n",
+    "    #     def scrubber_callback(y):\n",
+    "    #         y = int(y)\n",
+    "    #         h_line = hv.HLine(y + 0.5)(style={'color': 'black', 'alpha': 0.9, 'line_width': 2})\n",
+    "    #         return h_line\n",
+    "    #     scrubber_dmap = hv.DynamicMap(scrubber_callback, streams=[pointery])\n",
+    "    # plot = RevImage(img) * scrubber_dmap + RevImage(img_k1) * scrubber_dmap + RevImage(img_k2) * scrubber_dmap\n",
+    "    plot = RevImage(img1) + RevImage(img2) + RevImage(img3)\n",
+    "    if traces is not None:\n",
+    "        plot += hv.Overlay.from_values(\n",
+    "            [\n",
+    "                hv.Curve(trace / abs(trace).max(), kdims=[\"y\"], vdims=[\"i\" + str(i)])\n",
+    "                for i, trace in enumerate(traces)\n",
+    "            ]\n",
+    "        )\n",
+    "    plot = plot.opts(\n",
+    "        plot={\n",
+    "            \"Image\": {\"height\": thumbs.shape[1] * 2, \"width\": thumbs.shape[2] * 5},\n",
+    "            \"Curve\": {\n",
+    "                \"invert_axes\": True,\n",
+    "                \"height\": thumbs.shape[1] * 2,\n",
+    "                \"width\": thumbs.shape[2] * 5,\n",
+    "                \"invert_yaxis\": True,\n",
+    "            },\n",
+    "            \"Layout\": {\"normalize\": False},\n",
+    "        }\n",
+    "    )\n",
+    "    return plot\n",
+    "\n",
+    "\n",
+    "# visualize_trench(a)#, [a.sum(axis=1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trench_side_masks(mask, dilation=3):\n",
+    "    left = np.logical_or.accumulate(mask[:, ::-1], axis=1)[:, ::-1]\n",
+    "    right = np.logical_or.accumulate(mask, axis=1)\n",
+    "    outline = repeat_apply(skimage.morphology.binary_dilation, dilation)(mask)\n",
+    "    return (outline & ~right, outline & ~left)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pos = str(0)\n",
     "n_channels, n_timepoints = root_group[\"raw\"][pos].shape[:2]\n",
     "channel = 0"
@@ -644,8 +698,7 @@
    "source": [
     "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
     "ul, lr = get_trench_bbox(trench_points[trench_set_idx], trench_idx, x_lim, y_lim)\n",
-    "thumbs = root_group[\"raw\"][pos][0, :, ul[1] : lr[1], ul[0] : lr[0]]\n",
-    "plt.imshow(thumbs[10])"
+    "thumbs = root_group[\"raw\"][pos][0, :, ul[1] : lr[1], ul[0] : lr[0]]"
    ]
   },
   {
@@ -655,7 +708,10 @@
    "outputs": [],
    "source": [
     "thumbs_k1 = map_ndarray(lambda img: hessian_eigenvalues(img)[0], thumbs)\n",
-    "thumbs_k2 = map_ndarray(lambda img: hessian_eigenvalues(img)[1], thumbs)"
+    "thumbs_k2 = map_ndarray(lambda img: hessian_eigenvalues(img)[1], thumbs)\n",
+    "thumbs_masks = map_ndarray(\n",
+    "    lambda img: img > skimage.filters.threshold_otsu(img), thumbs\n",
+    ")"
    ]
   },
   {
@@ -664,37 +720,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_max = 128  # thumbs_k1.shape[0]\n",
-    "\n",
-    "\n",
-    "def plot_trench(t):\n",
-    "    p = (\n",
-    "        RevImage(thumbs[t])\n",
-    "        + RevImage(thumbs_k1[t])\n",
-    "        + RevImage(thumbs_k2[t])\n",
-    "        # + hv.Curve(profiles[t], kdims=['y'], vdims=['i'])\n",
-    "        + hv.Curve(profiles[t], kdims=[\"y\"], vdims=[\"j\"])\n",
-    "    ).opts(\n",
-    "        plot={\n",
-    "            \"Image\": {\n",
-    "                \"height\": thumbs.shape[1] * 2,\n",
-    "                \"width\": thumbs.shape[2] * 3,\n",
-    "                \"aspect\": 0.2,\n",
-    "            },\n",
-    "            \"Curve\": {\n",
-    "                \"invert_axes\": True,\n",
-    "                \"height\": thumbs.shape[1] * 2,\n",
-    "                \"width\": thumbs.shape[2] * 3,\n",
-    "                \"invert_yaxis\": True,\n",
-    "            },\n",
-    "            \"Layout\": {\"normalize\": False},\n",
-    "        }\n",
-    "    )\n",
-    "    return p\n",
-    "\n",
-    "\n",
-    "hv.HoloMap({t: plot_trench(t) for t in range(t_max)})\n",
-    "# plot_trench(0)"
+    "traces_min_left = []\n",
+    "traces_min_right = []\n",
+    "traces_max_left = []\n",
+    "traces_max_right = []\n",
+    "for t in tnrange(thumbs.shape[0]):\n",
+    "    left_mask, right_mask = trench_side_masks(thumbs_masks[t])\n",
+    "    traces_min_left.append((left_mask * thumbs_k2[t]).min(axis=1))\n",
+    "    traces_min_right.append((right_mask * thumbs_k2[t]).min(axis=1))\n",
+    "    traces_max_left.append((left_mask * thumbs_k2[t]).max(axis=1))\n",
+    "    traces_max_right.append((right_mask * thumbs_k2[t]).max(axis=1))"
    ]
   },
   {
@@ -703,43 +738,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def visualize_trench(img1, img2, img3, traces=None):\n",
-    "    # img_k1, img_k2 = hessian_eigenvalues(img)\n",
-    "    #     pointery = hv.streams.PointerY(y=0)\n",
-    "    #     def scrubber_callback(y):\n",
-    "    #         y = int(y)\n",
-    "    #         h_line = hv.HLine(y + 0.5)(style={'color': 'black', 'alpha': 0.9, 'line_width': 2})\n",
-    "    #         return h_line\n",
-    "    #     scrubber_dmap = hv.DynamicMap(scrubber_callback, streams=[pointery])\n",
-    "    # plot = RevImage(img) * scrubber_dmap + RevImage(img_k1) * scrubber_dmap + RevImage(img_k2) * scrubber_dmap\n",
-    "    plot = RevImage(img1) + RevImage(img2) + RevImage(img3)\n",
-    "    if traces is not None:\n",
-    "        plot += hv.Overlay.from_values(\n",
+    "t_max = 128\n",
+    "hv.HoloMap(\n",
+    "    {\n",
+    "        t: visualize_trench(\n",
+    "            thumbs[t],\n",
+    "            trench_side_masks(thumbs_masks[t])[0] * thumbs_k2[t],\n",
+    "            thumbs_k2[t],\n",
     "            [\n",
-    "                hv.Curve(trace / abs(trace).max(), kdims=[\"y\"], vdims=[\"i\" + str(i)])\n",
-    "                for i, trace in enumerate(traces)\n",
-    "            ]\n",
+    "                traces_min_left[t],\n",
+    "                traces_min_right[t],\n",
+    "                traces_max_left[t],\n",
+    "                traces_max_right[t],\n",
+    "            ],\n",
     "        )\n",
-    "    plot = plot.opts(\n",
-    "        plot={\n",
-    "            \"Image\": {\n",
-    "                \"height\": thumbs.shape[1] * 2,\n",
-    "                \"width\": thumbs.shape[2] * 3,\n",
-    "                \"aspect\": 0.2,\n",
-    "            },\n",
-    "            \"Curve\": {\n",
-    "                \"invert_axes\": True,\n",
-    "                \"height\": thumbs.shape[1] * 2,\n",
-    "                \"width\": thumbs.shape[2] * 3,\n",
-    "                \"invert_yaxis\": True,\n",
-    "            },\n",
-    "            \"Layout\": {\"normalize\": False},\n",
-    "        }\n",
-    "    )\n",
-    "    return plot\n",
-    "\n",
-    "\n",
-    "# visualize_trench(a)#, [a.sum(axis=1)])"
+    "        for t in range(t_max)\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prototyping"
    ]
   },
   {
@@ -808,9 +830,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = repeat_apply(skimage.morphology.binary_dilation, 3)(a_thresh) ^ a_thresh\n",
+    "left_mask, right_mask = trench_side_masks(a_thresh)\n",
+    "left_trace_min = (left_mask * a_k2).min(axis=1)\n",
+    "right_trace_min = (right_mask * a_k2).min(axis=1)\n",
+    "left_trace_max = (left_mask * a_k2).max(axis=1)\n",
+    "right_trace_max = (right_mask * a_k2).max(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "visualize_trench(\n",
-    "    a, b * a_k2, a_k2, [a_k2[:, :25].max(axis=1), a_k2[:, 25:].max(axis=1)]\n",
+    "    a,\n",
+    "    trench_side_masks(a_thresh)[0] * a_k2,\n",
+    "    a_k2,\n",
+    "    [left_trace_min, right_trace_min, left_trace_max, right_trace_max],\n",
     ")"
    ]
   },
